# lino

./: CMakeLists.txt  README.md  build.txt  lino.pro  main.cpp  mainwindow.cpp  mainwindow.h
include/: FindDialog.h  MainWindow.h  ReplaceDialog.h
src/: FindDialog.cpp  MainWindow.cpp  ReplaceDialog.cpp  main.cpp
